# HardKas

./: .env.example  .gitignore  AGENT.md  API_FREEZE_0_10.md  API_PHILOSOPHY.md  API_SURFACE_0_11_ALPHA.md  API_SURFACE_TOOLKIT_BASELINE.md  APPFLOW_FIX_SPRINT_REPORT_0.9.4.md  APP_LABS_HELPERS_ROUND_1_READY.md  AUDIT_0_9_1_PROGRAMMABILITY_RESULT.json  AUDIT_BUILDER_TEMPLATES_0_9_7.md  AUDIT_DEEP_10_FOUNDATION.md  AUDIT_ENVIRONMENT_BASELINE.md  AUDIT_FORBIDDEN_CLAIMS.md  AUDIT_MASTER_BUG_TRIAGE.md  AUDIT_PACKAGING_AND_RELEASE.md  AUDIT_STABLECOIN_ENABLEMENT_TOOLKIT.md  AUDIT_VERIFIERS_STRENGTH.md  BETA_GATE_REPORT.md  BUILDER_BOOK_V2_READY.md  CHANGELOG.md  CLEANUP_REPORT.md  CLI_COMMAND_TREE.json  CONTRIBUTING.md  DEPRECATED_SURFACE.md  DOMAIN_STATE_TOOLKIT_READY.md  DX_AUDIT_0_11_1_ALPHA.md  EXCHANGE_BACKEND_REFERENCE_READY.md  EXCHANGE_CRASH_RECOVERY_VALIDATED.md  EXCHANGE_RECONCILIATION_VALIDATED.md  EXPERIMENTAL_SURFACE.md  EXPLORER_BACKEND_REFERENCE_READY.md  FIX_REPORT_0_9_1_AUDIT_FINDINGS.md  FRICTIONS.md  FULL_APP_TEST_MATRIX_READY.md  HARDKAS_0.10.0_ALPHA_RC.md  HARDKAS_0_10_X_TOOLKIT_BASELINE_READY.md  HARDKAS_0_11_1_ALPHA_P53_1_READY.md  HARDKAS_0_11_1_ALPHA_RC_READY.md  HARDKAS_0_11_1_ALPHA_READY.md  (+220 more)
.agents/: AGENTS.md
examples/builder-labs/bl-002-escrow-multisig/tools/calc-signature/: Cargo.toml  fund-1784276488266.json  fund-1784570384388.json  fund-1784571027412.json  fund-1784572492749.json
examples/builder-labs/bl-002-escrow-multisig/tools/calc-signature/src/: main.rs
examples/builder-labs/bl-002-escrow-multisig/tools/silver-bridge/: Cargo.toml
(+1352 files in other folders)
