[package]
name = "calc-signature"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "78257f273a26c4be085bab0f79437dee99ca8835" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "78257f273a26c4be085bab0f79437dee99ca8835" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std"] }
